#33 Add navbar translation

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,3 +1,7 @@
 {
-  "appName": "Flow — Напоминания о поездках"
+  "appName": "Flow",
+  "appDescriptionLayout": "Trip reminders",
+  "navbarHome": "Home",
+  "navbarTrips": "Trips",
+  "navbarProfile": "Profile"
 }
