#33 Add translation for add trip first step of form

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -15,6 +15,28 @@
   "humanDateHour": "hours ago",
   "humanDateYesterday": "Yesterday",
   "humanDateDay": "days ago",
-  "tripsPageTitle": "Upcoming"
-
+  "tripsPageTitle": "Upcoming",
+  "profilePageTitle": "Profile",
+  "myAddresses": "My addresses",
+  "language": "Language",
+  "appTheme": "Theme",
+  "reserveTime": "Reserve time",
+  "aboutApp": "About",
+  "support": "Support and feedback",
+  "logoutButton": "Logout",
+  "cancelButton": "Cancel",
+  "logoutConfirmationMessage": "Are you sure you want to log out?",
+  "tripNamePlaceholder": "Trip name",
+  "fromWhere": "From where?",
+  "through": "Through what?",
+  "toWhere": "To where?",
+  "date": "Date",
+  "arrivalTime": "Arrival time",
+  "reminder": "Reminder",
+  "addPoint": "Add point",
+  "stopAtPoint": "Stop at point",
+  "stopAtPointMinutes": "min.",
+  "reminderIn": "in",
+  "reminderMinutes": "minutes",
+  "continueButton": "Continue"
 }
