--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -15,5 +15,28 @@
   "humanDateHour": "ч. назад",
   "humanDateYesterday": "Вчера",
   "humanDateDay": "дн. назад",
-  "tripsPageTitle": "Предстоящие"
+  "tripsPageTitle": "Предстоящие",
+  "profilePageTitle": "Профиль",
+  "myAddresses": "Мои адреса",
+  "language": "Язык",
+  "appTheme": "Тема оформления",
+  "reserveTime": "Запас времени",
+  "aboutApp": "О приложении",
+  "support": "Поддержка и обратная связь",
+  "logoutButton": "Выйти",
+  "cancelButton": "Отмена",
+  "logoutConfirmationMessage": "Вы уверены, что хотите выйти?",
+  "tripNamePlaceholder": "Название поездки",
+  "fromWhere": "Откуда поедем?",
+  "toWhere": "Куда поедем?",
+  "through": "Через что?",
+  "date": "Дата",
+  "arrivalTime": "Время прибытия",
+  "reminder": "Напоминание",
+  "addPoint": "Добавить точку",
+  "stopAtPoint": "Остановка в точке",
+  "stopAtPointMinutes": "мин.",
+  "reminderIn": "за",
+  "reminderMinutes": "минут",
+  "continueButton": "Продолжить"
 }
