#33 Add translation for pickers & some buttons

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -38,5 +38,8 @@
   "stopAtPointMinutes": "min.",
   "reminderIn": "in",
   "reminderMinutes": "minutes",
-  "continueButton": "Continue"
+  "continueButton": "Continue",
+  "pickerModalButton": "Ok",
+  "addTripButton": "Add trip",
+  "editTripButton": "Edit trip"
 }
