--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -38,5 +38,8 @@
   "stopAtPointMinutes": "мин.",
   "reminderIn": "за",
   "reminderMinutes": "минут",
-  "continueButton": "Продолжить"
+  "continueButton": "Продолжить",
+  "pickerModalButton": "Готово",
+  "addTripButton": "Добавить поездку",
+  "editTripButton": "Редактировать поездку"
 }
