--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -41,5 +41,8 @@
   "continueButton": "Continue",
   "pickerModalButton": "Ok",
   "addTripButton": "Add trip",
-  "editTripButton": "Edit trip"
+  "editTripButton": "Edit trip",
+  "deleteTripMessage": "Delete trip",
+  "deleteTripConfirmationMessage": "Are you sure you want to delete this trip?",
+  "deleteButton": "Delete"
 }
