#33 Add translation for informing page

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -64,5 +64,9 @@
   "theLink": "the link",
   "yourFirstName": "Your first name",
   "yourLastName": "Your last name",
-  "save": "Save"
+  "save": "Save",
+  "myAddressesTitle": "My addresses",
+  "noAddressesAdded": "No addresses added",
+  "notAttached": "Not attached",
+  "featureUnderDev": "The feature is under development"
 }
