#33 Add translation for theme page

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -68,5 +68,8 @@
   "myAddressesTitle": "My addresses",
   "noAddressesAdded": "No addresses added",
   "notAttached": "Not attached",
-  "featureUnderDev": "The feature is under development"
+  "featureUnderDev": "The feature is under development",
+  "bright": "Bright",
+  "dark": "Dark",
+  "system": "System"
 }
