--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -71,5 +71,8 @@
   "featureUnderDev": "Функция находится в разработке",
   "bright": "Светлая",
   "dark": "Темная",
-  "system": "Как в системе"
+  "system": "Как в системе",
+  "timeReserveMessage": "Дополнительный процент времени, чтобы учесть пробки, задержки и другие непредвиденные ситуации",
+  "currentTimeReserve": "Текущий запас"
+
 }
