--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -73,6 +73,7 @@
   "dark": "Темная",
   "system": "Как в системе",
   "timeReserveMessage": "Дополнительный процент времени, чтобы учесть пробки, задержки и другие непредвиденные ситуации",
-  "currentTimeReserve": "Текущий запас"
+  "currentTimeReserve": "Текущий запас",
+  "redirectMessage": "Вас перенаправит на другую страницу"
 
 }
