--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -74,6 +74,8 @@
   "system": "Как в системе",
   "timeReserveMessage": "Дополнительный процент времени, чтобы учесть пробки, задержки и другие непредвиденные ситуации",
   "currentTimeReserve": "Текущий запас",
-  "redirectMessage": "Вас перенаправит на другую страницу"
-
+  "redirectMessage": "Вас перенаправит на другую страницу",
+  "selectOnMap": "Выбрать на карте",
+  "selectPointOnMap": "Выбрать точку на карте",
+  "selectedPoint": "Выбранная точка"
 }
